# investment-text-classifier

./: .gitignore  Dockerfile  LICENSE  ML_KNOWLEDGE.md  README.md  TRAINING_PROCESS.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/models/: prediction.py  train.py
app/models/pytorch/: __init__.py  classifier.py
app/services/: classifier.py
data/test/: test_data.csv
data/training/: training_data.csv
data/validation/: validation_data.csv
tests/: evaluate_model.py  test_classifier_service.py  test_model.py
